--- a/index.html
+++ b/index.html
@@ -599,11 +599,11 @@
       <!-- IMPORTANT: Place your files at /cv/ :
            cv/Maulik Shah-Detailed-CV.htm
            cv/Maulik Shah-Detailed-CV_files/... -->
-      <iframe title="Full CV" src="cv/Maulik-Shah-Detailed-CV-clean.html" class="w-full cv-frame bg-white"></iframe>
+      <iframe title="Full CV" src="Resume - Kamal Thakor - Aug2025.pdf" class="w-full cv-frame bg-white"></iframe>
     </div>
     <div class="mt-3 flex gap-3">
-      <a href="cv/Maulik-Shah-Detailed-CV-clean.html" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900">Open Full Screen</a>
-      <a href="Maulik%20Shah.pdf" download="Maulik%20Shah.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
+      <a href="Resume - Kamal Thakor - Aug2025.pdf" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900">Open Full Screen</a>
+      <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Maulik%20Shah.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
     </div>
   </section>
 
@@ -613,23 +613,28 @@
       <div class="flex flex-col md:flex-row md:items-center gap-4">
         <div class="grow">
           <h4 class="font-semibold">Let’s talk</h4>
-          <p class="opacity-80 text-sm mt-1">Open to roles in Power Platform, .NET, App Support, and Cloud modernization.</p>
+          <p class="opacity-80 text-sm mt-1">About me & what I’m looking for:
+💼 Roles: Principal Solutions Architect, Data Protection Consultant, Senior Systems Engineer, IT Consultant, Backup Architect, Technical Support Engineer, Resilience Engineer, Pre-Sales Consultant, IT Manager, 
+ 🌎 Location: Greater Toronto Area / Canada / Toronto (open to hybrid/remote)
+ ⭐ Experience: 17+ years at Dell Technologies, delivering enterprise data protection, cloud, and backup/recovery solutions globally.
+I’m ready to bring my expertise immediately and make a real impact. Any leads, introductions, or advice would mean a lot.
+hashtag#OpenToWork hashtag#SolutionsArchitect hashtag#DataProtection hashtag#Cloud hashtag#BackupRecovery hashtag#Hiring hashtag#Compliance hashtag#Resilience</p>
         </div>
         <div class="flex gap-3">
-          <a href="mailto:Mmsgk251804@gmail.com" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900">Email</a>
-          <a href="https://www.linkedin.com/in/maulik-mukund-shah-20139b2a/" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">LinkedIn</a>
+          <a href="mailto:kamalt@rocketmail.com" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900">Email</a>
+          <a href="https://www.linkedin.com/in/kamal-thakor" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">LinkedIn</a>
         </div>
       </div>
     </div>
   </section>
 <!-- Ideas & Innovation -->
-<section id="ideas" class="mx-auto max-w-7xl px-4 py-10">
+<!--<section id="ideas" class="mx-auto max-w-7xl px-4 py-10">
   <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Ideas & Innovation</h2>
 
-  <!-- Azure Hot Keys Showcase -->
+  <!-- Azure Hot Keys Showcase 
   <div class="mt-6">
     <div class="relative rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-6 overflow-hidden" data-showcase>
-      <!-- Front content -->
+      <!-- Front content
       <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-4">
         <div>
           <h3 class="text-xl font-semibold">Azure Hot Keys - Productivity Accelerator</h3>
@@ -655,33 +660,34 @@
           </a>
         </div>
       </div>
-
+-->
       <!-- Hover/tap overlay -->
-      <div id="ahk-overlay"
+<!--      <div id="ahk-overlay"
            class="absolute inset-0 flex items-center justify-center bg-slate-900/90 text-white opacity-0 pointer-events-none transition-opacity"
            role="dialog" aria-modal="false" aria-label="Azure Hot Keys document preview">
         <div class="w-full max-w-3xl mx-auto px-4">
           <h4 class="text-center font-semibold">Preview: Concept Document (Page 1)</h4>
-
+-->
           <!-- Mini PDF preview -->
-          <div class="mt-3 rounded-xl overflow-hidden border border-white/20 bg-black/20 h-[900px]">
-            <!-- Try iframe first -->
+<!--          <div class="mt-3 rounded-xl overflow-hidden border border-white/20 bg-black/20 h-[900px]">
+            <!-- Try iframe first 
             <iframe class="w-full h-full"
                     src="assets/Azure-Hot-Keys-Concept.pdf#page=1&zoom=45"
                     title="Azure Hot Keys Concept (Preview)"
                     loading="lazy"></iframe>
           </div>
-
-          <div class="mt-4 flex flex-wrap justify-center gap-3">
+-->
+<!--          <div class="mt-4 flex flex-wrap justify-center gap-3">
             <a class="px-4 py-2 rounded-xl bg-white text-slate-900" href="assets/Azure-Hot-Keys-Concept.pdf" target="_blank" rel="noopener">📄 View Full Document</a>
             <button type="button" class="px-4 py-2 rounded-xl border border-white/50" data-close>Close</button>
           </div>
+  
         </div>
       </div>
     </div>
-
+-->
     <!-- bullets (optional) -->
-    <div class="mt-4 grid md:grid-cols-3 gap-4 text-sm">
+ <!--   <div class="mt-4 grid md:grid-cols-3 gap-4 text-sm">
       <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 p-4">
         <h4 class="font-medium">Why it matters</h4>
         <ul class="mt-2 list-disc list-inside opacity-90">
@@ -711,10 +717,10 @@
     </div>
   </div>
 </section>
-
+-->
 <footer class="py-10 text-center opacity-70 text-sm">
-  © <span id="yr"></span> Maulik Mukund Shah · 
-  <img src="https://visitor-badge.laobi.icu/badge?page_id=maulikMshah.Portfolio" alt="visitor badge"/>
+  © <span id="yr"></span> Kamal Thakor · 
+  <img src="" alt="visitor badge"/>
 </footer>
 <script>
   // Ideas overlay (supports hover on desktop, tap on mobile)
