--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <p class="mt-5 text-base opacity-90 max-w-3xl">Seasoned Data Protection & Infrastructure Architect with 17+ years of global experience in backup, recovery, compliance, and cloud modernization. Expert in implementing enterprise data protection solutions across Dell and third-party platforms, integrated with Azure, AWS, and GCP, driving secure, efficient, and scalable IT transformations.</p>
       <div class="mt-6 flex flex-wrap gap-3">
         <a href="#experience" class="px-5 py-2.5 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900 shadow">View Professsional Experience</a>
-        <a href="#projects" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Core Competencies / Skills</a>
+        <a href="#competencies" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Core Competencies / Skills</a>
         <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Resume - Kamal Thakor - Aug2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
       </div>
     </div>
