--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-6 text-center">
           <div id="aw-year" class="text-sm opacity-70">—</div>
           <div id="aw-name" class="text-xl font-semibold mt-1">—</div>
-          <div class="text-xs opacity-70 mt-2">Click to view proof on LinkedIn</div>
+          <div class="text-xs opacity-70 mt-2"></div>
         </div>
       </a>
       <button id="aw-next" class="px-3 py-2 rounded-xl border border-slate-300/70 dark:border-slate-700/70">Next</button>
