--- a/index.html
+++ b/index.html
@@ -617,14 +617,12 @@
   <section id="fullcv" class="mx-auto max-w-7xl px-4 py-10">
     <h2 class="text-2xl md:text-3xl font-bold tracking-tight">Full CV in PDF</h2>
     <div class="mt-4 rounded-2xl overflow-hidden border border-slate-200/70 dark:border-slate-800/70">
-      <!-- IMPORTANT: Place your files at /cv/ :
-           cv/Maulik Shah-Detailed-CV.htm
-           cv/Maulik Shah-Detailed-CV_files/... -->
+
       <iframe title="Full CV" src="Resume - Kamal Thakor - Aug2025.pdf" class="w-full cv-frame bg-white"></iframe>
     </div>
     <div class="mt-3 flex gap-3">
       <a href="Resume - Kamal Thakor - Aug2025.pdf" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900">Open Full Screen</a>
-      <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Maulik%20Shah.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
+      <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Resume - Kamal Thakor - Aug2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70">Download CV</a>
     </div>
   </section>
 
@@ -740,8 +738,7 @@
 </section>
 -->
 <footer class="py-10 text-center opacity-70 text-sm">
-  © <span id="yr"></span> Kamal Thakor · 
-  <img src="" alt="visitor badge"/>
+  Copyright © <span id="yr"></span> Kamal Thakor
 </footer>
 <script>
   // Ideas overlay (supports hover on desktop, tap on mobile)
