--- a/index-leftpane.html
+++ b/index-leftpane.html
@@ -3,36 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <title>Kamal Thakor — Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="layout">
+<body class="bg-gray-50 text-gray-800">
+  <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="sidebar">
-      <h1>Kamal Thakor</h1>
-      <p>Solutions Architect | Data Protection | Cloud Security</p>
-      <nav>
-        <ul>
-          <li><a href="#summary">Summary</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#skills">Competencies</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#certifications">Certifications</a></li>
-          <li><a href="#achievements">Achievements</a></li>
-          <li><a href="#contact">Contact</a></li>
+    <aside class="w-64 bg-gray-900 text-white p-6 sticky top-0 h-screen">
+      <h1 class="text-2xl font-bold">Kamal Thakor</h1>
+      <p class="mt-2 text-sm">Solutions Architect | Data Protection | Cloud Security</p>
+      <nav class="mt-8">
+        <ul class="space-y-3">
+          <li><a href="#summary" class="block hover:text-yellow-400">Summary</a></li>
+          <li><a href="#experience" class="block hover:text-yellow-400">Experience</a></li>
+          <li><a href="#skills" class="block hover:text-yellow-400">Competencies</a></li>
+          <li><a href="#education" class="block hover:text-yellow-400">Education</a></li>
+          <li><a href="#certifications" class="block hover:text-yellow-400">Certifications</a></li>
+          <li><a href="#achievements" class="block hover:text-yellow-400">Achievements</a></li>
+          <li><a href="#contact" class="block hover:text-yellow-400">Contact</a></li>
         </ul>
       </nav>
     </aside>
 
-    <!-- Main Content -->
-    <main class="content">
-      <section id="summary">…</section>
-      <section id="skills">…</section>
-      <section id="experience">…</section>
-      <section id="education">…</section>
-      <section id="certifications">…</section>
-      <section id="achievements">…</section>
-      <section id="contact">…</section>
+    <!-- Content -->
+    <main class="flex-1 p-10 space-y-12">
+      <section id="summary">
+        <h2 class="text-2xl font-semibold">Summary</h2>
+        <p class="mt-3 text-gray-700">Seasoned Data Protection & Infrastructure Architect with 17+ years…</p>
+      </section>
+
+      <section id="skills">
+        <h2 class="text-2xl font-semibold">Core Competencies</h2>
+        <ul class="mt-3 grid grid-cols-2 gap-2 list-disc list-inside">
+          <li>Pre-Sales & Customer Engagement</li>
+          <li>Cloud & Hybrid Data Protection</li>
+          <li>Compliance (PCI, NIST, CIS)</li>
+          <li>Backup & Recovery Solutions</li>
+        </ul>
+      </section>
+
+      <section id="experience">
+        <h2 class="text-2xl font-semibold">Professional Experience</h2>
+        <div class="mt-6 space-y-8">
+          <!-- Example entry -->
+          <div>
+            <h3 class="font-bold">Founder & Principal Consultant — Vivanka Inc.</h3>
+            <span class="text-sm text-gray-500">Apr 2024 – Present</span>
+            <ul class="mt-2 list-disc list-inside space-y-1 text-gray-700">
+              <li>Led multiple NetWorker → DD9940 migration projects.</li>
+              <li>Designed PPDM + Data Domain with Azure tiering.</li>
+              <li>Delivered pre-sales workshops for enterprise clients.</li>
+            </ul>
+          </div>
+          <!-- Copy in the rest of your Experience entries here -->
+        </div>
+      </section>
+
+      <section id="education">
+        <h2 class="text-2xl font-semibold">Education</h2>
+        <ul class="mt-3 space-y-2">
+          <li><strong>M.S. Computer Science</strong>, AIT Thailand (2003-2005)</li>
+          <li><strong>B.S. Computer Science</strong>, Assumption University Thailand (1996-2001)</li>
+        </ul>
+      </section>
+
+      <section id="certifications">
+        <h2 class="text-2xl font-semibold">Certifications</h2>
+        <ul class="mt-3 grid grid-cols-2 gap-2 list-disc list-inside">
+          <li>Azure Fundamentals</li>
+          <li>AWS Bootcamp</li>
+          <li>AI Fundamentals</li>
+          <li>ISC2 Candidate</li>
+        </ul>
+      </section>
+
+      <section id="achievements">
+        <h2 class="text-2xl font-semibold">Achievements</h2>
+        <p class="mt-3 text-gray-700">Recognition, awards, and career highlights…</p>
+      </section>
+
+      <section id="contact">
+        <h2 class="text-2xl font-semibold">Contact</h2>
+        <p class="mt-3">📍 Toronto, Canada<br>✉️ you@example.com</p>
+      </section>
     </main>
   </div>
 </body>
