--- a/index-card.html
+++ b/index-card.html
@@ -3,34 +3,77 @@
 <head>
   <meta charset="UTF-8">
   <title>Kamal Thakor — Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <header>
-    <h1>Kamal Thakor</h1>
-    <p>Solutions Architect | Cybersecurity | Cloud Resilience</p>
+<body class="bg-gray-50 text-gray-800">
+  <header class="bg-gray-900 text-white p-8 text-center">
+    <h1 class="text-3xl font-bold">Kamal Thakor</h1>
+    <p class="mt-2 text-sm">Solutions Architect | Cybersecurity | Cloud Resilience</p>
   </header>
 
-  <main>
-    <!-- Grid cards for overview sections -->
-    <div class="grid">
-      <section id="summary" class="card">…</section>
-      <section id="skills" class="card">…</section>
-      <section id="education" class="card">…</section>
-      <section id="certifications" class="card">…</section>
-      <section id="achievements" class="card">…</section>
+  <main class="max-w-6xl mx-auto p-10 space-y-12">
+    <!-- Grid cards -->
+    <div class="grid md:grid-cols-2 gap-8">
+      <section id="summary" class="bg-white shadow-lg rounded-xl p-6">
+        <h2 class="text-xl font-semibold">Summary</h2>
+        <p class="mt-3 text-gray-700">Seasoned Data Protection & Infrastructure Architect with 17+ years…</p>
+      </section>
+
+      <section id="skills" class="bg-white shadow-lg rounded-xl p-6">
+        <h2 class="text-xl font-semibold">Core Competencies</h2>
+        <ul class="mt-3 space-y-2 list-disc list-inside">
+          <li>Cloud & Hybrid Data Protection</li>
+          <li>Backup & Recovery Solutions</li>
+          <li>Compliance (PCI, NIST, CIS)</li>
+          <li>Consulting & Pre-Sales</li>
+        </ul>
+      </section>
+
+      <section id="education" class="bg-white shadow-lg rounded-xl p-6">
+        <h2 class="text-xl font-semibold">Education</h2>
+        <ul class="mt-3 space-y-2">
+          <li><strong>M.S. Computer Science</strong>, AIT Thailand (2003-2005)</li>
+          <li><strong>B.S. Computer Science</strong>, Assumption University Thailand (1996-2001)</li>
+        </ul>
+      </section>
+
+      <section id="certifications" class="bg-white shadow-lg rounded-xl p-6">
+        <h2 class="text-xl font-semibold">Certifications</h2>
+        <ul class="mt-3 space-y-2 list-disc list-inside">
+          <li>Azure Fundamentals</li>
+          <li>AWS Bootcamp</li>
+          <li>AI Fundamentals</li>
+          <li>ISC2 Candidate</li>
+        </ul>
+      </section>
+
+      <section id="achievements" class="bg-white shadow-lg rounded-xl p-6 md:col-span-2">
+        <h2 class="text-xl font-semibold">Achievements</h2>
+        <p class="mt-3 text-gray-700">Recognition, awards, and highlights…</p>
+      </section>
     </div>
 
     <!-- Full-width Experience -->
-    <section id="experience" class="experience">
-      <h2>Professional Experience</h2>
-      <div class="timeline">…</div>
+    <section id="experience" class="bg-white shadow-lg rounded-xl p-6">
+      <h2 class="text-2xl font-semibold">Professional Experience</h2>
+      <div class="mt-6 space-y-8">
+        <div>
+          <h3 class="font-bold">Founder & Principal Consultant — Vivanka Inc.</h3>
+          <span class="text-sm text-gray-500">Apr 2024 – Present</span>
+          <ul class="mt-2 list-disc list-inside space-y-1 text-gray-700">
+            <li>Led NetWorker → DD9940 migration projects.</li>
+            <li>Designed PPDM + Data Domain with Azure tiering.</li>
+            <li>Ran client workshops to align solutions with business needs.</li>
+          </ul>
+        </div>
+        <!-- Add other roles here -->
+      </div>
     </section>
 
     <!-- Contact footer -->
-    <footer id="contact">
-      <h2>Contact</h2>
-      <p>Email: you@example.com</p>
+    <footer id="contact" class="text-center mt-12">
+      <h2 class="text-xl font-semibold">Contact</h2>
+      <p class="mt-3">📍 Toronto, Canada<br>✉️ you@example.com</p>
     </footer>
   </main>
 </body>
