--- a/index-card.html
+++ b/index-card.html
@@ -6,9 +6,23 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
-  <header class="bg-gray-900 text-white p-8 text-center">
-    <h1 class="text-3xl font-bold">Kamal Thakor</h1>
-    <p class="mt-2 text-sm">Solutions Architect | Cybersecurity | Cloud Resilience</p>
+
+  <!-- Sticky Navigation -->
+  <header class="sticky top-0 z-50 bg-gray-900 text-white shadow-md">
+    <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
+      <h1 class="text-xl font-bold">Kamal Thakor</h1>
+      <nav>
+        <ul class="flex space-x-6 text-sm">
+          <li><a href="#summary" class="hover:text-yellow-400">Summary</a></li>
+          <li><a href="#skills" class="hover:text-yellow-400">Competencies</a></li>
+          <li><a href="#education" class="hover:text-yellow-400">Education</a></li>
+          <li><a href="#certifications" class="hover:text-yellow-400">Certifications</a></li>
+          <li><a href="#achievements" class="hover:text-yellow-400">Achievements</a></li>
+          <li><a href="#experience" class="hover:text-yellow-400">Experience</a></li>
+          <li><a href="#contact" class="hover:text-yellow-400">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="max-w-6xl mx-auto p-10 space-y-12">
@@ -16,7 +30,9 @@
     <div class="grid md:grid-cols-2 gap-8">
       <section id="summary" class="bg-white shadow-lg rounded-xl p-6">
         <h2 class="text-xl font-semibold">Summary</h2>
-        <p class="mt-3 text-gray-700">Seasoned Data Protection & Infrastructure Architect with 17+ years…</p>
+        <p class="mt-3 text-gray-700">
+          Seasoned Data Protection & Infrastructure Architect with 17+ years…
+        </p>
       </section>
 
       <section id="skills" class="bg-white shadow-lg rounded-xl p-6">
