--- a/index.html
+++ b/index.html
@@ -744,7 +744,8 @@
 </section>
 -->
 <footer class="py-10 text-center opacity-70 text-sm">
-  Copyright © <span id="yr"></span> Kamal Thakor
+  Full credits to: © <span id="yr"></span> Maulik Mukund Shah
+  Contents of Kamal Thakor (Inspired by the author)
 </footer>
 <script>
   // Ideas overlay (supports hover on desktop, tap on mobile)
