--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
         <a href="#contact" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Contact</a>
       </nav>
       <div class="ml-auto flex items-center gap-2">
-        <a href="https://www.linkedin.com/in/kamal-thakor/" target="_blank" rel="noreferrer" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><i class="fab fa-linkedin fa-2x"></i></a>
-        <a href="mailto:kamalt@rocketmail.com" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><i class="fas fa-envelope fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/kamal-thakor/" target="_blank" rel="noreferrer" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><img src="https://img.icons8.com/ios-filled/50/0077B5/linkedin.png" alt="LinkedIn Icon" class="w-6 h-6"/><span>LinkedIn</span></a>
+        <a href="mailto:kamalt@rocketmail.com" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><img src="https://img.icons8.com/ios-filled/50/4CAF50/new-post.png" alt="Email Icon" class="w-6 h-6"/><span>kamalt@rocketmail.com</span></a>
         <button id="dm" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow" aria-label="Toggle dark mode">☀️Light</button>
       </div>
     </div>
@@ -224,12 +224,12 @@
       <div class="rounded-2xl border border-slate-200/70 dark:border-slate-800/70 bg-white/70 dark:bg-slate-900/60 shadow-sm p-6">
         <h3 class="font-semibold text-lg">Highlights</h3>
         <ul class="mt-4 space-y-2 text-sm">
-          <li>• Pre-Sales & Customer Engagement – Solution workshops, PoCs, demos, RFP support, stakeholder influence</li>
-          <li>• Cloud & Hybrid Data Protection – Azure, AWS, GCP integration with Dell Data Domain & PPDM</li>
-          <li>• Data Protection Solutions – Dell (Avamar, NetWorker, Data Domain, PPDM, Cyber Recovery Vault), Commvault, Veeam, Rubrik, Cohesity, IBM Spectrum Protect</li>
-          <li>• Cybersecurity & Compliance – Cyber Recovery, CyberSense, Zero Trust frameworks, PCI, NIST, CIS</li>
-          <li>• Consulting & Delivery – Architecture design, migrations, large-scale implementations, escalation management</li>
-          <li>• Business Impact – Value-selling, ROI justification, executive presentations, risk reduction strategies</li>
+          <li>Pre-Sales & Customer Engagement – Solution workshops, PoCs, demos, RFP support, stakeholder influence</li>
+          <li>Cloud & Hybrid Data Protection – Azure, AWS, GCP integration with Dell Data Domain & PPDM</li>
+          <li>Data Protection Solutions – Dell (Avamar, NetWorker, Data Domain, PPDM, Cyber Recovery Vault), Commvault, Veeam, Rubrik, Cohesity, IBM Spectrum Protect</li>
+          <li>Cybersecurity & Compliance – Cyber Recovery, CyberSense, Zero Trust frameworks, PCI, NIST, CIS</li>
+          <li>Consulting & Delivery – Architecture design, migrations, large-scale implementations, escalation management</li>
+          <li>Business Impact – Value-selling, ROI justification, executive presentations, risk reduction strategies</li>
         </ul>
       </div>
     </div>
@@ -641,9 +641,9 @@
 <p>hashtag#OpenToWork hashtag#SolutionsArchitect hashtag#DataProtection hashtag#Cloud hashtag#BackupRecovery hashtag#Hiring hashtag#Compliance hashtag#Resilience</p>
         </div>
         <div class="flex gap-3">
-          <a href="mailto:kamalt@rocketmail.com" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><i class="fas fa-envelope fa-2x">📩 kamalt@rocketmail.com</i></a>
-          <a href="#" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><i class="fas fa-phone fa-2x">📱 +1 (289) 830-8942</i></a>
-          <a href="https://www.linkedin.com/in/kamal-thakor" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><i class="fab fa-linkedin fa-2x">LinkedIn</i></a>
+          <a href="mailto:kamalt@rocketmail.com" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><img src="https://img.icons8.com/ios-filled/50/4CAF50/new-post.png" alt="Email Icon" class="w-6 h-6"/><span>kamalt@rocketmail.com</span></a>
+          <a href="#" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><img src="https://img.icons8.com/ios-filled/50/4CAF50/phone.png" alt="Phone Icon" class="w-6 h-6"><span>+1 (289) 830-8942</span></a>
+          <a href="https://www.linkedin.com/in/kamal-thakor" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><img src="https://img.icons8.com/ios-filled/50/0077B5/linkedin.png" alt="LinkedIn Icon" class="w-6 h-6"/><span>LinkedIn</span></a>
         </div>
       </div>
     </div>
