--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
         <a href="#contact" class="px-3 py-1 rounded-full hover:bg-slate-100 dark:hover:bg-slate-800">Contact</a>
       </nav>
       <div class="ml-auto flex items-center gap-2">
-        <a href="https://www.linkedin.com/in/kamal-thakor/" target="_blank" rel="noreferrer" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><img src="https://img.icons8.com/ios-filled/50/0077B5/linkedin.png" alt="LinkedIn Icon" class="w-6 h-6"/><span>LinkedIn</span></a>
-        <a href="mailto:kamalt@rocketmail.com" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><img src="https://img.icons8.com/ios-filled/50/4CAF50/new-post.png" alt="Email Icon" class="w-6 h-6"/><span>kamalt@rocketmail.com</span></a>
+        <a href="https://www.linkedin.com/in/kamal-thakor/" target="_blank" rel="noreferrer" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><img src="https://img.icons8.com/ios-filled/50/0077B5/linkedin.png" alt="LinkedIn Icon" class="w-6 h-6"/></a>
+        <a href="mailto:kamalt@rocketmail.com" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow"><img src="https://img.icons8.com/ios-filled/50/4CAF50/new-post.png" alt="Email Icon" class="w-6 h-6"/></a>
         <button id="dm" class="text-sm px-3 py-1.5 rounded-xl border border-slate-300/70 dark:border-slate-700/70 hover:shadow" aria-label="Toggle dark mode">☀️Light</button>
       </div>
     </div>
@@ -637,20 +637,20 @@
 <p> 💼 Roles: Principal Solutions Architect, Data Protection Consultant, Senior Systems Engineer, IT Consultant, Backup Architect, Technical Support Engineer, Resilience Engineer, Pre-Sales Consultant, IT Manager</p>
 <p> 🌎 Location: Greater Toronto Area / Canada / Toronto (open to hybrid/remote)</p>
 <p> ⭐ Experience: 17+ years at Dell Technologies, delivering enterprise data protection, cloud, and backup/recovery solutions globally.</p>
+<img src="https://img.icons8.com/ios-filled/50/4CAF50/phone.png" alt="Phone Icon" class="w-6 h-6">Mobile: +1 (289) 830-8942</a>
 <p>I’m ready to bring my expertise immediately and make a real impact. Any leads, introductions, or advice would mean a lot.</p>
 <p>hashtag#OpenToWork hashtag#SolutionsArchitect hashtag#DataProtection hashtag#Cloud hashtag#BackupRecovery hashtag#Hiring hashtag#Compliance hashtag#Resilience</p>
         </div>
         <div class="flex gap-3">
-          <a href="mailto:kamalt@rocketmail.com" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><img src="https://img.icons8.com/ios-filled/50/4CAF50/new-post.png" alt="Email Icon" class="w-6 h-6"/><span>kamalt@rocketmail.com</span></a>
-          <a href="#" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><img src="https://img.icons8.com/ios-filled/50/4CAF50/phone.png" alt="Phone Icon" class="w-6 h-6"><span>+1 (289) 830-8942</span></a>
-          <a href="https://www.linkedin.com/in/kamal-thakor" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><img src="https://img.icons8.com/ios-filled/50/0077B5/linkedin.png" alt="LinkedIn Icon" class="w-6 h-6"/><span>LinkedIn</span></a>
+          <a href="mailto:kamalt@rocketmail.com" class="px-4 py-2 rounded-2xl bg-slate-900 text-white dark:bg-white dark:text-slate-900"><img src="https://img.icons8.com/ios-filled/50/4CAF50/new-post.png" alt="Email Icon" class="w-6 h-6"/>Email</a>
+          <a href="https://www.linkedin.com/in/kamal-thakor" target="_blank" rel="noreferrer" class="px-4 py-2 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><img src="https://img.icons8.com/ios-filled/50/0077B5/linkedin.png" alt="LinkedIn Icon" class="w-6 h-6"/>LinkedIn</a>
         </div>
       </div>
     </div>
     <div class="mt-3 flex flex-wrap gap-2 text-xs">
-      <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Resume - Kamal Thakor - Aug2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Resume for Practice Lead / Managerial Positions</span></a>
+      <a href="Resume - Kamal Thakor - Sept2025 - PracticeLead.pdf" download="Resume - Kamal Thakor - Sept2025 - PracticeLead.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Resume for Practice Lead / Managerial Positions</span></a>
       <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Resume - Kamal Thakor - Aug2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Resume for Architect Positions</span></a>
-      <a href="Resume - Kamal Thakor - Aug2025.pdf" download="Resume - Kamal Thakor - Aug2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Resume for Pre-Sales Positions</span></a>
+      <a href="Resume - Kamal Thakor - Sept2025.pdf" download="Resume - Kamal Thakor - Sept2025.pdf" class="px-5 py-2.5 rounded-2xl border border-slate-300/70 dark:border-slate-700/70"><span class="px-2 py-1 rounded-full bg-slate-100 dark:bg-slate-800 border">Resume for Pre-Sales Positions</span></a>
     </div>
   </section>
 <!-- Ideas & Innovation -->
