--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
 </section>
 -->
 <footer class="py-10 text-center opacity-70 text-sm">
-  Full credits to: © <span id="yr"></span> Maulik Mukund Shah
+  Full credits to: © <span id="yr"></span> Maulik Mukund Shah<br>
   Contents of Kamal Thakor (Inspired by the author)
 </footer>
 <script>
